...
                  ),
                ),
              ],
            ),
            const SizedBox(height: 8),
            Semantics(
              label: 'Password Input Field',
              textField: true,
              child: TextFormField(
                controller: controller,
                obscureText: state.obscurePassword,
                decoration: InputDecoration(
                  hintText: 'Enter password',
...
